konga/kong-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: konga
  name: kong-ui
  labels:
    app: frontend
spec:
  replicas: 1
  template:
    metadata:
      name: kong-ui
      labels:
        app: kong-frontend
    spec:
      containers:
      -  name: konga
         image: pantsel/konga
         ports:
          - containerPort: 1337
  selector:
    matchLabels:
      app: kong-frontend
