konga/kong-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
spec:
  type: NodePort
  ports:
  - targetPort: 1337
    port: 1337
    nodePort: 30009
  selector:
    app: kong-frontend
