konga/konga-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: konga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: konga-test.com
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: konga-service
                port:
                  number: 1337
